--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@ singleElement.exe
 rotatedSortedArray.exe
 linked_Rep_BinaryTree.exe
 tree_Traversal.exe
+removeDuplicate.exe
+removeElement.exe
+searchInsertPos.exe
